--- a/alchemy/templates/base_lightheader.html
+++ b/alchemy/templates/base_lightheader.html
@@ -40,17 +40,12 @@
 </head>
 
 <body>
+
   <header class="header">
     <div class="container">
-      {% include 'include/header.html' %}
+      {% include 'include/header_light.html' %}
     </div>
   </header>
-  
-   <div class="main">
-    <div class="container">
-      {% include 'include/news.html' %}
-    </div>
-   </div>
 
   <div class="main">
     <div class="container">
