--- a/alchemy/templates/index.html
+++ b/alchemy/templates/index.html
@@ -12,44 +12,31 @@
 {% endblock %}
 
 {% block page_header %}
-  Articles
+  Research Areas
 {% endblock %}
 
+
+
 {% block content %}
-  {% for article in articles_page.object_list %}
-    <article class="row teaser">
-      <header class="col-sm-4 text-muted">
-        <ul>
-          <li title="{{ article.date.isoformat() }}">
-            <i class="fa fa-clock-o"></i>
-            {{ article.locale_date }}
+{% for area in RESEARCHAREAS %}
+    <article class="row">
+    {{ area }}
+      <header class="col-sm-12 text-muted">
+        <ul class="list-inline">
+			{% for article in articles_page.object_list %}
+			{% if article.type == area %}
+          <li class="list-inline-item col-sm-4">
+          <a href="{{ SITEURL }}/{{ article.url }}">
+            {% if article.cover %} {{ article.cover }} {% endif %}
+            {% if article.titleshort %} {{ article.titleshort }} {% endif %}
+            </a>
           </li>
-          <li>
-            <i class="fa fa-folder-open-o"></i>
-            <a href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category }}</a>
-          </li>
-          {% if not HIDE_AUTHORS and article.authors %}
-            <li>
-              <i class="fa fa-user-o"></i>
-              {% for author in article.authors %}
-                <a href="{{ SITEURL }}/{{ author.url }}">{{ author }}</a>{% if not loop.last %}, {% endif %}
-              {% endfor %}
-            </li>
           {% endif %}
+		  {% endfor %}
         </ul>
       </header>
-      <div class="col-sm-8">
-        <h4 class="title">
-          <a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a>
-        </h4>
-        <div class="content">
-          {{ article.summary|striptags }}
-        </div>
-      </div>
+      
     </article>
-    {% if not loop.last %}
-      <hr>
-    {% endif %}
-  {% endfor %}
-  {% include 'include/pagination.html' %}
+
+{% endfor %}
 {% endblock %}
