--- a/alchemy/templates/article.html
+++ b/alchemy/templates/article.html
@@ -25,6 +25,7 @@
           <i class="fa fa-folder-open-o"></i>
           <a href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category }}</a>
         </li>
+        
         {% if not HIDE_AUTHORS and article.authors %}
           <li class="list-inline-item">
             <i class="fa fa-user-o"></i>
@@ -33,6 +34,11 @@
             {% endfor %}
           </li>
         {% endif %}
+        {% if article.published %}
+          <li class="content">
+			{{ article.published }}
+        </li>
+           {% endif %} 
         {% if article.tags %}
           <li class="list-inline-item">
             <i class="fa fa-files-o"></i>
